# CppAuthApp

./: .gitignore  CMakeLists.txt  ReadMe.md  main.cpp
frontend/app/: package-lock.json  package.json
frontend/app/src/: App.jsx  Dashboard.jsx  Login.css  Login.jsx  index.css
